objects/docebo_v3__SessionAttendance__c.object
<CustomObject>
    <description>Represents a Docebo user attendance to a webinar/classroom session.</description>
    <fields>
        <fullName>docebo_v3__DoceboUser__c</fullName>
        <description>A Docebo user</description>
        <label>Docebo User</label>
        <referenceTo>docebo_v3__DoceboUser__c</referenceTo>
        <relationshipLabel>Session Attendances</relationshipLabel>
        <relationshipName>SessionAttendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__EnrolmentId__c</fullName>
        <description>The internal LMS enrolment id prepended with &apos;w&apos; for webinars and &apos;c&apos; for classrooms.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Enrolment Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__Session__c</fullName>
        <description>A Docebo session.</description>
        <label>Session</label>
        <referenceTo>docebo_v3__Session__c</referenceTo>
        <relationshipLabel>Session Attendances</relationshipLabel>
        <relationshipName>SessionAttendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__UnenrollmentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UnenrollmentDate</label>
        <type>DateTime</type>
    </fields>
    <label>Session Attendance</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>docebo_v3__DoceboUser__c</columns>
        <columns>docebo_v3__EnrolmentId__c</columns>
        <columns>docebo_v3__Session__c</columns>
        <columns>docebo_v3__UnenrollmentDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Attendance Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>